# rpc

./: .gitignore  CMakeLists.txt  README  TODO.txt  build.bat  build.sh
boost/rpc/: config.hpp  throws.hpp
boost/rpc/core/: arg.hpp  async_local.hpp  async_remote.hpp  commands.hpp  coordinator.hpp  error.hpp  exception.hpp  local.hpp  placeholder.hpp  remote.hpp  signature.hpp  tags.hpp  throws.hpp  traits.hpp
boost/rpc/detail/: binary_buffer_iprimitive.hpp  binary_buffer_oprimitive.hpp  header.hpp  init_variant.hpp  packed_iarchive.hpp  packed_oarchive.hpp  switch_.hpp
boost/rpc/protocol/: binary_serialization.hpp  bitwise.hpp  serialization.hpp  spirit.hpp  stdios.hpp
boost/rpc/service/: async_commander.hpp  async_stream_connection.hpp  async_tcp.hpp  async_udp.hpp  intrusive_function.hpp  iostream.hpp  shared_memory.hpp  stream_header.hpp  tcp.hpp  udp.hpp
boost/rpc/service/detail/: function_map.hpp  intrusive_function.hpp
boost/rpc/utility/: future.hpp  reallocator.hpp  sequential_id.hpp
libs/rpc/example/: CMakeLists.txt
libs/rpc/example/console/: console.cpp
libs/rpc/test/: CMakeLists.txt  Jamroot.jam  complete.cpp
libs/rpc/test/common/: async_connection.hpp  call_over_async.hpp  signatures.hpp
libs/rpc/test/core/: async_local.cpp  async_remote.cpp  local.cpp  placeholder.cpp  remote.cpp
libs/rpc/test/serialize/: binary_serialization.cpp  bitwise.cpp  serialize_test.hpp  spirit.cpp
libs/rpc/test/service/: async_tcp.cpp
